Implemented to feature to request password resetting email. Tests implemented and passed.
