# src/router/UserRouter.js
@@ -1,5 +1,6 @@
 const express = require("express");
 const userServices = require("../service/UserService");
+const {userResetForgottenPasswordValidationRules} = require("../utils/Validators");
 const {securedPath} = require("../middleware/AuthorizationMiddleware");
 const {userRegisterValidationRules, userLoginValidationRules, userChangeInformationValidationRules, validate} = require("../utils/Validators")
 
@@ -11,5 +12,7 @@ userRouter.put("/", securedPath, userChangeInformationValidationRules, validate,
 userRouter.post("/login", userLoginValidationRules, validate, userServices.loginUser);
 userRouter.post("/info", securedPath, userServices.userInfo);
 userRouter.post("/logout", securedPath, userServices.userLogout);
+userRouter.post("/password/reset", userServices.sendResetEmail);
+userRouter.put("/password/reset", userResetForgottenPasswordValidationRules, validate, userServices.resetForgottenPassword);
 
 module.exports = userRouter;
